force-app/main/default/objects/Attachments_Data__c/Attachments_Data__c.object-meta.xml
<CustomObject>
    <label>Attachments + Data</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Attachments + Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments + Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>