force-app/main/default/objects/Attachments_Data__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments +</label>
    <referenceTo>Attachments_New__c</referenceTo>
    <relationshipLabel>Attachments + Data</relationshipLabel>
    <relationshipName>Attachments_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>