force-app/main/default/objects/Attachments_Data__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>