force-app/main/default/objects/Attachments_Data__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <formula>Attachments__r.File_Type__c</formula>
    <label>File Type</label>
    <type>Text</type>
</CustomField>